--- a/app/src/main/res/layout/activity_aluno_view.xml
+++ b/app/src/main/res/layout/activity_aluno_view.xml
@@ -57,9 +57,10 @@
         <EditText
             android:id="@+id/edtAluno"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_marginBottom="20dp"
             android:ems="10"
+            android:hint='"edtAluno"'
             android:inputType="textPersonName"
             android:textSize="25sp" />
 
@@ -77,9 +78,8 @@
 
             <Spinner
                 android:id="@+id/spnAlunos"
-                android:layout_width="200dp"
-                android:layout_height="match_parent"
-                android:textSize="25sp"></Spinner>
+                android:layout_width="match_parent"
+                android:layout_height="50dp"></Spinner>
         </LinearLayout>
 
         <LinearLayout
@@ -92,7 +92,7 @@
                 android:id="@+id/btVoltar"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="5dp"
+                android:layout_marginLeft="33dp"
                 android:layout_marginRight="5dp"
                 android:background="#CCCCCC"
                 android:onClick="voltar"
@@ -113,7 +113,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
+                android:layout_marginRight="33dp"
                 android:background="#9EA9E8"
                 android:onClick="salvarCelular"
                 android:text="Salvar" />
