--- a/app/src/main/res/layout/activity_curso_view.xml
+++ b/app/src/main/res/layout/activity_curso_view.xml
@@ -86,7 +86,7 @@
                 android:layout_marginRight="5dp"
                 android:background="@android:color/transparent"
                 android:contentDescription='"Botao Excluir Curso"'
-                android:onClick="excluirCurso"
+                android:onClick="excluiCurso"
                 android:src="@drawable/baseline_folder_delete_24" />
 
             <ImageButton
