--- a/app/src/main/res/layout/activity_aluno_list.xml
+++ b/app/src/main/res/layout/activity_aluno_list.xml
@@ -50,6 +50,7 @@
         android:id="@+id/btnHomeAln"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription='iniciar'
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
@@ -60,9 +61,10 @@
         android:id="@+id/btnAddAln"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription='novo aluno'
         app:layout_constraintBottom_toBottomOf="@+id/btnHomeAln"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
         app:layout_constraintTop_toTopOf="@+id/btnHomeAln"
-        app:srcCompat="@drawable/baseline_check_24" />
+        app:srcCompat="@drawable/baseline_playlist_add_24" />
 </androidx.constraintlayout.widget.ConstraintLayout>
