--- a/app/src/main/res/layout/activity_aluno_view.xml
+++ b/app/src/main/res/layout/activity_aluno_view.xml
@@ -113,13 +113,26 @@
             android:visibility="visible"
             tools:visibility="visible" />
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Curso"
-            android:textSize="20sp"
-            android:visibility="visible"
-            tools:visibility="visible" />
+            android:layout_height="45dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="188dp"
+                android:layout_height="wrap_content"
+                android:text="Curso"
+                android:textSize="20sp"
+                android:visibility="visible"
+                tools:visibility="visible" />
+
+            <Button
+                android:id="@+id/btnNovoC"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Novo Curso" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/txtNovoNome"
