--- a/app/src/main/res/layout/activity_curso_view.xml
+++ b/app/src/main/res/layout/activity_curso_view.xml
@@ -51,14 +51,37 @@
             android:textSize="20sp" />
 
         <EditText
-            android:id="@+id/edtCurso"
+            android:id="@+id/edtNomCurso"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:ems="10"
-            android:hint='"EditarCurso"'
+            android:hint='Nome do Curso'
             android:inputType="textPersonName"
             android:textSize="25sp" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Duracao"
+            android:textSize="20sp" />
+
+        <EditText
+            android:id="@+id/edtTempoCurso"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:ems="10"
+            android:hint='Numero de Horas do Curso'
+            android:inputType="number"
+            android:textSize="25sp" />
+
+        <ListView
+            android:id="@+id/listAlns"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -101,6 +124,7 @@
                 android:onClick="salvarCurso"
                 android:src="@drawable/baseline_save_as_24" />
         </LinearLayout>
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
