--- a/app/src/main/res/layout/activity_curso_list.xml
+++ b/app/src/main/res/layout/activity_curso_list.xml
@@ -34,38 +34,51 @@
         android:orientation="vertical"
         app:layout_constraintGuide_begin="216dp" />
 
-    <ListView
-        android:id="@+id/listViewCursos"
+
+    <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginBottom="180dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="match_parent"
+        android:background="#FFE7FD"
+        android:gravity="center"
+        android:orientation="vertical"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <ImageButton
-        android:id="@+id/btnHomeCurso"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription='"Home Button"'
-        android:src="@drawable/baseline_home_24"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/guideline4"
-        app:layout_constraintStart_toStartOf="@+id/guideline3"
-        app:layout_constraintTop_toBottomOf="@+id/listViewCursos" />
+        <ListView
+            android:id="@+id/listViewCursos"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#E6E9FB"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guideline2"
+            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/btnHomeCurso"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="30dp"
+                android:contentDescription='Home Button'
+                android:src="@drawable/baseline_home_24" />
 
 
-    <ImageButton
-        android:id="@+id/btnCheckCurso"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription='Novo curso'
-        android:src="@drawable/baseline_playlist_add_24"
-        app:layout_constraintBottom_toBottomOf="@+id/btnHomeCurso"
-        app:layout_constraintEnd_toStartOf="@+id/guideline2"
-        app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toTopOf="@+id/btnHomeCurso" />
+            <ImageButton
+                android:id="@+id/btnCheckCurso"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:contentDescription='Novo curso'
+                android:src="@drawable/baseline_playlist_add_24" />
+
+        </LinearLayout>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
